added index html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>LearnGit2</title>
 </head>
 <body>
-  
+  <div>
+    <div class="note">
+      <h1>Note Title:</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora officia quos illo pariatur, accusamus aliquam natus ipsum hic eum earum!</p>
+    </div>
+  </div>
 </body>
 </html>
